dataset1235/2025-2/2868285114/users/221116065/executions/3649835072_1626817775.log
== SUBMISSION (2025-08-23 22:43:47)
-- CODE: 
"Area do Círculo e Volume da Esfera"

from math import *

raio = float(input("Qual o raio r?: "))

A = pi * raio**2
V = 4/3 * pi * raio**3

print(round(A, 3))
print(round(V, 3))

                     
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 22:43:36)
-- CODE: 
"Area do Círculo e Volume da Esfera"

from math import *

raio = float(input("Qual o raio r?: "))

A = pi * raio**2
V = 4/3 * pi * raio**3

print(round(A, 3))
print(round(V, 3))

                     
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 22:31:37)
-- CODE: 
"Area do Círculo e Volume da Esfera"

from math import *

area = float(input("Qual a area do circulo?: "))
volume = float(input("Qual o volume da esfera com raio r?: ))

                     
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 6
    volume = float(input("Qual o volume da esfera com raio r?: ))
                         ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 6
    volume = float(input("Qual o volume da esfera com raio r?: ))
                         ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 6
    volume = float(input("Qual o volume da esfera com raio r?: ))
                         ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 6
    volume = float(input("Qual o volume da esfera com raio r?: ))
                         ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 6
    volume = float(input("Qual o volume da esfera com raio r?: ))
                         ^
SyntaxError: unterminated string literal (detected at line 6)
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 6
    volume = float(input("Qual o volume da esfera com raio r?: ))
                         ^
SyntaxError: unterminated string literal (detected at line 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 22:31:50)
-- CODE: 
"Area do Círculo e Volume da Esfera"

from math import *

area = float(input("Qual a area do circulo?: "))
volume = float(input("Qual o volume da esfera com raio r?: "))

                     
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    volume = float(input("Qual o volume da esfera com raio r?: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    volume = float(input("Qual o volume da esfera com raio r?: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: ''
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    volume = float(input("Qual o volume da esfera com raio r?: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    volume = float(input("Qual o volume da esfera com raio r?: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    volume = float(input("Qual o volume da esfera com raio r?: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    volume = float(input("Qual o volume da esfera com raio r?: "))
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
